@@ -60,6 +60,15 @@ CHANGES
     than that of the parent table doesn't render at all,
     as cross-schema references do not appear to be supported.
 
+- oracle
+  - The cx_oracle "decimal detection" logic, which takes place
+    for for result set columns with ambiguous numeric characteristics,
+    now uses the decimal point character determined by the locale/
+    NLS_LANG setting, using an on-first-connect detection of 
+    this character.  cx_oracle 5.0.3 or greater is also required
+    when using a non-period-decimal-point NLS_LANG setting.
+    [ticket:1953].
+    
 - declarative
   - An error is raised if __table_args__ is not in tuple
     or dict format, and is not None.  [ticket:1972]
